fix: Update scrollbar styles and remove unnecessary CSS rules

--- a/app/globals.css
+++ b/app/globals.css
@@ -39,22 +39,15 @@ body {
    }
 }
 @layer utilities {
-   *::-webkit-scrollbar-thumb {
-      width: 4px;
-      height: 4px;
-   }
-
-   *::-webkit-scrollbar-track {
-      width: 4px;
-      height: 4px;
-   }
-
    .no-scrollbar {
       scrollbar-width: 0 !important;
    }
 
    .no-scrollbar::-webkit-scrollbar {
       display: none !important;
+   }
+   .scrollbar::-webkit-scrollbar {
+      display: block !important;
    }
 
    .no-scrollbar div {
@@ -63,6 +56,37 @@ body {
 
    .no-scrollbar div::-webkit-scrollbar {
       display: none !important;
+   }
+   .scrollbar div {
+      scrollbar-width: 4px !important;
+   }
+
+   .scrollbar div::-webkit-scrollbar {
+      display: block !important;
+   }
+   *::-webkit-scrollbar,
+   html::-webkit-scrollbar,
+   .main-wrapper::-webkit-scrollbar,
+   body::-webkit-scrollbar {
+      height: 0px;
+      margin-inlne: 4px;
+
+      width: 5px;
+   }
+   *::-webkit-scrollbar-thumb,
+   .scrollbar::-webkit-scrollbar-thumb,
+   html::-webkit-scrollbar-thumb,
+   body::-webkit-scrollbar-thumb {
+      background: linear-gradient(135deg, #00ae50 0%, #00ae50 100%);
+      border-radius: 3px;
+   }
+   *::-webkit-scrollbar-track,
+   html::-webkit-scrollbar-track,
+   .main-wrapper::-webkit-scrollbar-track,
+   body::-webkit-scrollbar-track {
+      background-color: transparent;
+
+      width: 0px;
    }
 }
 
